--- a/价格行为分析.md
+++ b/价格行为分析.md
@@ -1,10 +1,261 @@
-# 趋势的简单回调           第3节
+## 价格行为是什么
 
-## 趋势回调 分为
+![image-20241116090226449](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116090226449.png)
 
-简单回调: 一段或两段式的简单回调运动。
+价格行为的书籍
 
-复杂回调:  多段式的回调结构
+在交易市场赚钱不是你的分析能力,而是你的交易理念是否正确,交易系统是否正确
+
+严格执行交易系统
+
+喜欢20ema
+
+## 认识k线形态01
+
+趋势k线
+
+连续不重叠的同方向,代表趋势能力强劲
+
+![image-20241116091256384](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116091256384.png)
 
 
 
+空头急速行情,也是连续不重叠
+
+![image-20241116091555056](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116091555056.png)
+
+
+
+趋势能力耗尽
+
+![image-20241116091717335](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116091717335.png)
+
+
+
+![image-20241116092541441](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116092541441.png)
+
+
+
+非趋势k线
+
+实体很小,影线很长,常说的十字星,多空双方都未能控制这根k线
+
+![image-20241116092911008](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116092911008.png)
+
+反转k线
+
+![image-20241116093110743](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116093110743.png)
+
+反转形态的本质就是顺势方向的急速行情的高潮运动,
+
+接着马上迎来一次逆势的空头的突破,不要去找完美的反转k线
+
+![image-20241116093526767](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116093526767.png)
+
+反转k线不能与前面有太多的重叠
+
+![image-20241116093642040](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116093642040.png)
+
+重叠在一起就是交易区间
+
+双k线反转
+
+![image-20241116093848239](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116093848239.png)
+
+3k线反转
+
+全是先一次高潮的突破再逆势反转
+
+![image-20241116130813031](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116130813031.png)
+
+外包k和内包k基本都是没有意义的,除了在关键的阻力位和支撑位
+
+![image-20241116131247370](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116131247370.png)
+
+上行通道倾向于向下突破,基本都是熊旗
+
+这里对高点形成了假突破,收了一个空头k线,低二入场形态,k线不算很长,止损也可以接受
+
+![image-20241116131410027](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116131410027.png)
+
+铁丝网形态
+
+![image-20241116131834115](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116131834115.png)
+
+低二形态
+
+逆势方向的2次突破
+
+![image-20241116131943331](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116131943331.png)
+
+二次突破在小周期上会形成双重顶底
+
+![image-20241116132542724](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116132542724.png)
+
+
+
+均线回调二次突破
+
+![image-20241116132633571](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116132633571.png)
+
+## 正确认识多空力量02
+
+聪明的资金永远不会在第一次触顶或触底后进场,一定会玩到后续回测的力量
+
+交易区间高抛低吸
+
+## 趋势的简单回调03
+
+价格运动总是重复着一些固定的模式,如果掌握这些模式.对读图和操盘都有很大帮助
+
+![image-20241116144554347](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116144554347.png)
+
+
+
+回调入场入场后最好不要是交易区间,最好不是运行很久的趋势,以免出现长时间的复杂回调
+
+靠近20Ema是做回调比较好的点位
+
+这一张图先形成了好多的做多逻辑
+
+1.一个收敛区间的突破
+
+2.水平阻力位的强势突破
+
+3.回测了上一轮波段高点的水平支撑位
+
+4.有一个信号k线
+
+5.在20EMA附近
+
+在信号k线上方挂突破单,止损放在支撑位下方一点      :这是偏左侧入场
+
+第二个图后续走出了一个交易区间
+
+交易区间高二入场  :这是右侧入场
+
+也可以箱体突破入场  :也是右侧入场
+
+![image-20241116150402637](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116150402637.png)
+
+
+
+![image-20241117092851599](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117092851599.png)
+
+区间容易出现假突破尽量高二或低二入场
+
+先进行了一轮上涨,随后进行了复杂回调,回调结束后延续了之前的上涨方向,但是能量很快就耗尽了,告诉了一个信号,多头不愿意持续`买入,并且在阻力位再次突破失败,并且跌破了关键的支撑位,下破之后迅速反弹,形成交易区间后,低二入场,交易区间非常容易形成假突破
+
+![image-20241117093946829](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117093946829.png)
+
+下破,楔形回调,急速下破,轻微反弹形成交易区间,有一根向上的假突破,这里是低二的变体,前面是一轮微微向下的交易区间看作是低一,后面向上突破接下破可以看作是二次突破,空头的二次努力,并且在20ema附近
+
+![image-20241117101639878](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117101639878.png)
+
+小级别的
+
+![image-20241117101600301](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117101600301.png)
+
+
+
+急速上涨,简单回调,转为复杂回调,楔形变体,上破多头延续,没有量能的跟进,在阻力位被限制住了,形成了假突破,不能突破前面的波段高点,大幅下破,但后续形成了交易区间,并不是一次简单回调,上涨到了支撑和阻力互换的关键水平位,二次突破入场
+
+![image-20241117103021753](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117103021753.png)
+
+入场后续,形成了铁丝网形态,及其不确定,保守交易者会选择平仓离场,交易胜率已经降低了
+
+![image-20241117103450686](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117103450686.png)
+
+上涨,简单回调,急速上涨接上升通道,急速与通道经常容易向下突破回测通道的起点
+
+上升通道后,小周期形成简单2次回调,上涨无力形成下破,就变成偏向做空的市场
+
+![image-20241117104233575](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117104233575.png)
+
+大幅下破回调至支撑和阻力互换的位置
+
+![image-20241117104818743](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117104818743.png)
+
+左侧交易:箱体突破后入场,空色位置挂现价单,止损放支撑和阻力互换的上方一点
+
+![image-20241117105104277](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117105104277.png)
+
+右侧交易:二次突破入场
+
+![image-20241117105413053](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117105413053.png)
+
+所有的调整形态都称为旗形,牛市的调整形态就叫牛旗,牛旗倾向于向上突破,但是这段向上的能量很快就枯竭了,这段调整旗形就称为末端旗形,可能带来的就是趋势最后一段的上涨,是潜在的反转形态
+
+像一个旗子
+
+![image-20241117110326804](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117110326804.png)
+
+总结:就是一波急速上涨或下跌,然后一段式回调,或两段式回调,到阻力位,二次突破入场,或者箱体突破入场
+
+## 认识复杂的回调形态 04
+
+绿色的线
+
+波段高点相连的是下降趋势线
+
+蓝色的线
+
+波段低点相连的是趋势的通道线
+
+
+
+价格跌到通道线就容易过冲,行情会反转或调整
+
+![image-20241117130049276](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117130049276.png)
+
+加速突破开始的通道线,又加速突破了第二根新的通道线,加速又加速,行情过冲了
+
+![image-20241117130511599](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117130511599.png)
+
+急速的上升,两段式回调,再上升,但是能量不足枯竭了
+
+一段本该延续趋势的能量枯竭了,这就是潜在的反转形态
+
+![image-20241117131647953](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117131647953.png)
+
+两段式的回调很常见形态和走势
+
+![image-20241117131942073](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117131942073.png)
+
+回调形态中出现了反转形态,反转的方向正好顺着大势的方向
+
+两段式回调,但是第二次回调明显乏力,这是潜在反转形态,又正好在回调当中出现,可以大大加大胜率
+
+![image-20241117132219825](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117132219825.png)
+
+三段式回调,一般形成楔形
+
+![image-20241117132942527](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117132942527.png)
+
+先是急速与通道形态,画出通道线,第二根通道线相连接,加速再加速,过冲了,能量耗尽之后,容易形成深幅回调,
+
+![image-20241117133658114](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117133658114.png)
+
+通道调整
+
+![image-20241117135803219](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117135803219.png)
+
+旗形调整
+
+
+
+![image-20241117140041826](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117140041826.png)
+
+收敛调整和箱体调整
+
+![image-20241117140115865](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117140115865.png)
+
+三角收敛
+
+![image-20241117140244016](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117140244016.png)
+
+箱体,交易区间
+
+![image-20241117141228842](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117141228842.png)
+
+复杂回调一般是 ,急速与通道,过冲,交易区间,箱体,收敛区间,楔形回调,两段式回调
