--- a/模拟交易反思.md
+++ b/模拟交易反思.md
@@ -26,7 +26,7 @@
 
 6. 空   63200  :  63253.1      |   -9.01
 
-   阻力位开单之后浮盈,但是第二天价格缓涨到我开单的上方,我就感觉不对劲,就直接止损了,果然10/15 时 btc价格都到了66000了,这一波止损的漂亮,感受价格的波动才是真,10/15日老明星回撤了半年的收益,主要我也是不认可他的这种操作,喜欢扛单,结局就是利润回吐,以及爆仓,要吸取他的教训
+   阻力位开单之后浮盈,但是第二天价格缓涨到我开单的上方,我就感觉不对劲,就直接止损了,果然10/15 时 btc价格都到了66000了,这一波止损的漂亮,感受价格的波动才是真,10/15日老明星回撤了半年的收益,主要我也是不认可他的这种操作,喜欢扛单,结局就是半年利润回吐,以及爆仓,要吸取他的教训
    
 6. 
 
