--- a/罗伯特系列书-财富自由之路.md
+++ b/罗伯特系列书-财富自由之路.md
@@ -20,6 +20,10 @@ E代表雇员（Employee）
 
 2．S（self-employed，自由职业者）喜欢自己为自己工作
 
+语言就是工具,要成为一位成功的企业主B，必备技能之一就是做一个语言专家，学会对不同的人说不同的话。他训练我们先仔细地听对方使用的词语，然后让我们懂得自己可以使用哪些词语，以及何时使用它们来回应别人从而达到最好的效果。
+
+
+
 领导力就是激发人们做出最好表现的能力
 
 阅读财务报表、市场营销、推销、会计、管理、生产和谈判，并且他强调应该学会与他人合作和领导他人
@@ -38,9 +42,171 @@ E代表雇员（Employee）
 
 财富是用时间衡量的，而不是用钱衡量的。
 
+田纳西.欧尼.福特 的 歌词中,完美阐述了被剥削者的生活,背景是美国19世纪
+
+- You load sixteen tons, whattaya get?
+
+  拖运了十六吨煤，你挣得了什么？
+
+- Another day older and deeper in debt
+
+  又一天的衰老和更深重的债务
+
+  ...
+
+  我已把我的灵魂献给了公司
+
+  
+
+## 追求自由
+
+大多数人没有接受适当的培训以变得适合在B象限和I象限工作
+
+大多数人把自己对财务自由的追求限制在现金流的左侧象限
 
 
 
+## 做你自己的事情
+
+S的工作最辛苦的原因是，他们是典型的“大厨兼洗碗工”。
+
+他们必须做所有的工作或者说负责所有的事情，而这些工作在较大的公司中将由许多经理和雇员共同完成。刚起步的S通常要回电话、付账单、打电话推销、尽力做低价广告、接待顾客、招聘职员、解雇职员、当职员不在时填补空缺、与税务人员交涉、应付政府检察官等。
+
+## 谁纳税最多
+
+富人缴纳较少的所得税。为什么会这样呢？因为他们不是作为雇员在挣钱。非常富有的人知道，最好的合法的避税方法是在B象限和I象限中获取收入。
+
+## 多数人注重收入而不是投资
+
+![image-20241108214351168](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241108214351168.png)
+
+## 第4章
+
+  商业系统的3种类型
+
+1．传统的由企业主B创办的C型企业——由你自己发展起来的系统
+
+  2．特许经营权——购买现成的系统
+
+例如如家,麦当劳,肯德基...那些,我可以去买他们的特许经营权
+
+“不用，你已经学习了很久如何建立自己的企业系统，不要停下来。特许经营权是为那些不想创建或者不知道如何创建系统的人准备的。而且，你也没有25万美元来从我这儿买走一份经营权。”
+
+  3．网络营销——购进并成为现存系统的一部分
+
+## 银行不会把钱借给没有系统的人
+
+你能唱歌并不意味着你了解营销系统、财会系统，以及销售系统、人力资源系统、法律系统等众多系统，而这些系统都是企业生存和成功所必需的。
+
+## 个人的特许经营企业
+
+因为他们担心如果做了不同的事情朋友们会怎么说。我很了解这种心理，因为我也曾经是这样。在一个小城镇里，每个人都知道其他人在做什么，如果有人不喜欢你正在做的事情，整个城镇都会知道，而且会有人跳出来干涉你。
+
+  我反复对自己说的最管用的一句话就是：“你怎么看我我管不着，最重要的是我怎么看我自己。”
+
+1．要想成功，你需要克服害怕被拒绝的心理，不必过多地考虑他人对你的评价。我经常遇到一些人，他们畏缩不前，只是因为他们担心如果做了不同的事情朋友们会怎么说。我很了解这种心理，因为我也曾经是这样。在一个小城镇里，每个人都知道其他人在做什么，如果有人不喜欢你正在做的事情，整个城镇都会知道，而且会有人跳出来干涉你。
+
+  我反复对自己说的最管用的一句话就是：“你怎么看我我管不着，最重要的是我怎么看我自己。”
+
+  富爸爸曾鼓励我在施乐公司做销售员，我在那儿干了4年，不是因为他喜欢复印机，而是因为他想让我学会克服羞怯和害怕被拒绝的心理。
+
+2．学会领导别人。与各种不同类型的人一起工作是企业里最困难的事。我所遇到的那些在任何企业中都很成功的人是天生的领导者。与人和睦相处并激励他人的能力是一项非常宝贵的技能，而这种技能完全是可以学会的。
+
+## 投资者的7个等级
+
+
+
+## 训练你的大脑认识钱
+
+掌握金融学。金融学使你具有理解资本语言和数字系统的能力
+
+## 知道真正的风险是什么
+
+训练你的大脑认识钱之后，第二步是学会识别真正的风险是什么。当人们对我说，投资是有风险的，我会说：“投资没有风险，没文化才有风险。”
+
+## 你的利率是多少……真的吗
+
+让我们假设，你买了一所价值10万美元的住宅，首付2万美元，并以8％的利率和30年偿还期向银行借到剩余的8万美元。
+
+  5年内，你将付给银行35220美元，其中31276美元是利息，仅有3944美元是偿还债务。
+
+  如果你持有这笔贷款30年，你将支付本息共211323美元，远远多于你最初借到的8万美元。你支付的利息总和是131323美元。
+
+  另外，这211323美元还不包括财产税和贷款保险费。
+
+  有趣的是，131323美元看起来比8万美元的8％要多得多。这笔30年贷款的利率更像是160％。
+
+
+
+“你的利润是在你购买时——而不是卖出时产生的。”
+
+读懂财务报表
+
+要认识事实和建议之间的区别。
+
+## 钱是一种毒品
+
+“小心对钱上瘾，”他经常说，“一旦你习惯了摄取钱，就无法摆脱它的纠缠。”
+
+因为他注意到，人们在有钱时很高兴，没钱时就变得烦躁不安或者郁郁寡欢。这跟吸毒者一模一样，注射毒品之后就兴奋起来，没有毒品时就变得沮丧抑郁、充满暴力。
+
+《以交易为生》
+
+《世故的哲学家》
+
+《点石成金》
+
+《最重要的人物》
+
+《熊市浪潮》
+
+《财务报表分析》《投资者的第一本书》
+
+## 谁更聪明——你还是你的银行家
+
+大部分人没有填写个人财务报表的习惯，他们至多只是尽力平衡每月的收支。因此，你应该祝贺自己，你现在已经领先你的大多数同事了，因为你已经完成了你的财务报表并为自己设定了目标。
+
+你拥有的每一项负债，都是别人的资产
+
+对于每一项负债，如抵押贷款、汽车贷款、学校贷款和信用卡，你都是债权人的雇工，你努力工作正在使他们变得更富有。
+
+要懂得区分良性债务和不良债务。他常说：“当你欠了某个人的钱，你就成了他的雇工。如果你借了一笔30年的贷款，那么你就得做30年的雇工。而且，在债务结束时，他们不会发给你一块纪念金表。”
+
+因此他喜欢可租赁房产，他也鼓励我去购买这类资产，因为“银行给你贷款，你的房客会替你偿还”。
+
+![image-20241117210035396](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117210035396.png)
+
+## 采取行动
+
+1．复习上一章要求你做的财务报表。
+
+  2．确定你现在的收入来自现金流象限图的哪一个象限。
+
+  3．确定你希望5年后你的主要收入来自哪个象限。
+
+  4．开始你的现金流管理计划：
+
+（1）先支付自己
+
+（2）集中精力减少你的个人债务
+
+● 注销你所有的信用卡，只留下一到两张。
+
+  ● 这一到两张信用卡中的任何新债务都必须在每月底还清，并且不要再借入任何长期债务。
+
+## 第13章
+
+了解风险与冒险的区别
+
+我经常听人们说：“投资有风险。”
+
+  我不同意这种说法。相反我说：“无知才冒险。”
+
+![image-20241117210715567](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117210715567.png)
+
+
+
+![image-20241117210726782](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117210726782.png)
 
 
 
