--- a/价格行为分析.md
+++ b/价格行为分析.md
@@ -6,13 +6,30 @@
 
 在交易市场赚钱不是你的分析能力,而是你的交易理念是否正确,交易系统是否正确
 
+交易经验
+
 严格执行交易系统
 
-喜欢20ema
+20ema
+
+掌握价格运动的规律可以让你看清市场的总体状态，
+善用价格运动的强弱可以帮你确认入场位置的有效性。
+无论你珥在用什么系统进行交易，
+掌握价格行为之后绝对可以提高你的交易水平上限！
+
+
 
 ## 认识k线形态01
 
-趋势k线
+市场只有两种运动状态,趋势运动和非趋势运动,
+
+k线也是一样,要么是趋势k,要么是  非趋势k
+
+趋势k线,实体占k线绝大部分,实体越长,影线越短,代表趋势能量越强劲,多空双方完全控制了这根k
+
+过长的趋势k也可能是高潮行情,能量耗尽
+
+
 
 连续不重叠的同方向,代表趋势能力强劲
 
@@ -26,7 +43,7 @@
 
 
 
-趋势能力耗尽
+趋势能量耗尽
 
 ![image-20241116091717335](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116091717335.png)
 
@@ -38,11 +55,15 @@
 
 非趋势k线
 
-实体很小,影线很长,常说的十字星,多空双方都未能控制这根k线
+实体很小,影线很长,常说的十字星,多空双方都未能控制这根k线,行情出现停顿,没有方向
+
+所有的k线不是非趋势k线,就是趋势k线
 
 ![image-20241116092911008](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116092911008.png)
 
 反转k线
+
+![image-20241220104303652](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241220104303652.png)
 
 ![image-20241116093110743](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116093110743.png)
 
@@ -68,7 +89,23 @@
 
 ![image-20241116130813031](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116130813031.png)
 
-外包k和内包k基本都是没有意义的,除了在关键的阻力位和支撑位
+外包k和内包k,也是信号k
+
+内包k线 :   第二根k线在第一根k线内,就像被第一根k线包裹着一样
+
+ 外包k和内包k基本都是没有意义的,除了在关键的阻力位和支撑位
+
+
+
+![image-20241220193842640](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241220193842640.png)
+
+外包k线 :   第二根k线高点高于,前面的k线,低点也低于前面的k线  
+
+![image-20241220204012981](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241220204012981.png)    
+
+外包k建仓,但是盈亏比差,也是不会做这个
+
+
 
 ![image-20241116131247370](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116131247370.png)
 
@@ -79,6 +116,8 @@
 ![image-20241116131410027](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116131410027.png)
 
 铁丝网形态
+
+市场不确定,不建议交易,不确定增加
 
 ![image-20241116131834115](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116131834115.png)
 
@@ -98,25 +137,69 @@
 
 ![image-20241116132633571](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116132633571.png)
 
+
+
+
+
 ## 正确认识多空力量02
+
+价格为什么会上涨或下跌?
+
+![image-20241224180720479](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241224180720479.png)
+
+btc基本是现货主导的价格,空头力量就是大量现货卖掉,多头力量就是大量现货买入
+
+
+
+这一段, 每上涨一点就回调一点,因为市场主力的意见不一致,有些人认为牛市就此开始了,有些人认为到高位要下跌,就做空,也有多头获利平仓,导致价格的停顿
+
+![image-20241224183415387](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241224183415387.png)
+
+后续价格在2w短暂停顿,强势突破,尝试做空的主力参与者已经止损离场了,聪明钱不会和市场较劲,发现自己错误马上止损,场内参与做多的机构看见2w被突破,知道牛市开始了,2w以上再也没有阻力位.场内想参与做空的主力此时不会贸然进场,聪明钱不会逆势而为,只有价格运行到有逻辑支撑的位置时才会做空,后续没有明显的回调,这是初期强势上涨的表现
+
+![image-20241224183947278](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241224183947278.png)
+
+后续出现了2个等距段的上涨,第二段上涨更剧烈,说明牛市很强劲,能量没有减弱
+
+![image-20241224220801270](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241224220801270.png)
+
+后面就明显出现乏力了,在突破前面波段高点时,马上收了一根空头趋势k线,这是突破的停顿,紧接着又出现了更长的阴线,这是突破的失败,突破没有跟进力量,因为主力在很低的位置建仓2w  3w ,现在突破以后不再买入,而是卖出手里的现货,做空的机构,迅速捕捉到动能匮乏的信号,此时会加大力度布局空单
+
+趋势的反转,会有很多的假突破,突破后就有主力卖掉手中的现货离场平仓,不是选择继续参与做多
+
+![image-20241224221701119](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241224221701119.png)
+
+交易区间高抛低吸,主力都是高抛低吸,形成了一个交易区间,区间中有非常多的假突破,只有区间被明确突破后,才能看趋势行情,在区间被明确突破之前,必须一直把他当成交易区间进行交易
+
+![image-20241224223130673](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241224223130673.png)
+
+左边三根k,是空头动能强劲的表现,右面代表的是空头能量衰竭,是由于买压的真空导致的,因为在交易区间里买方只愿意在区间底部买入,顶部卖出,右边这跟k线,是缺乏买入力量导致的短暂真空,所以空头很容易把价格打到区间底部,但是这不代表空头力量强劲
+
+**![image-20241224223611840](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241224223611840.png)**
+
+
 
 聪明的资金永远不会在第一次触顶或触底后进场,一定会玩到后续回测的力量
 
-交易区间高抛低吸
+
 
 ## 趋势的简单回调03
 
 价格运动总是重复着一些固定的模式,如果掌握这些模式.对读图和操盘都有很大帮助
 
+![image-20241225112123674](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241225112123674.png)
+
+
+
 ![image-20241116144554347](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116144554347.png)
 
 
 
-回调入场入场后最好不要是交易区间,最好不是运行很久的趋势,以免出现长时间的复杂回调
+回调入场后最好不要是交易区间,最好不是运行很久的趋势,以免出现长时间的复杂回调
 
 靠近20Ema是做回调比较好的点位
 
-这一张图先形成了好多的做多逻辑
+这一张图先形成了好多的做多逻辑0
 
 1.一个收敛区间的突破
 
@@ -144,15 +227,19 @@
 
 区间容易出现假突破尽量高二或低二入场
 
-先进行了一轮上涨,随后进行了复杂回调,回调结束后延续了之前的上涨方向,但是能量很快就耗尽了,告诉了一个信号,多头不愿意持续`买入,并且在阻力位再次突破失败,并且跌破了关键的支撑位,下破之后迅速反弹,形成交易区间后,低二入场,交易区间非常容易形成假突破
+先进行了一轮上涨,随后进行了复杂回调,回调结束后延续了之前的上涨方向,但是能量很快就耗尽了,告诉了一个信号,多头不愿意持续`买入,并且在阻力位再次突破失败,并且跌破了关键的支撑位,下破之后迅速反弹 (急速下破接急速反弹非常好的入场形态)  ,形成交易区间后,低二入场,交易区间非常容易形成假突破
 
 ![image-20241117093946829](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117093946829.png)
 
-下破,楔形回调,急速下破,轻微反弹形成交易区间,有一根向上的假突破,这里是低二的变体,前面是一轮微微向下的交易区间看作是低一,后面向上突破接下破可以看作是二次突破,空头的二次努力,并且在20ema附近
+下破,楔形回调 ( 复杂回调 )
+
+
 
 ![image-20241117101639878](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117101639878.png)
 
 小级别的
+
+急速下破,轻微反弹形成交易区间,有一根向上的假突破,这里是低二的变体,前面是一轮微微向下的交易区间看作是低一,后面向上突破接下破可以看作是二次突破,空头的二次努力,并且在20ema附近
 
 ![image-20241117101600301](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117101600301.png)
 
@@ -161,6 +248,8 @@
 急速上涨,简单回调,转为复杂回调,楔形变体,上破多头延续,没有量能的跟进,在阻力位被限制住了,形成了假突破,不能突破前面的波段高点,大幅下破,但后续形成了交易区间,并不是一次简单回调,上涨到了支撑和阻力互换的关键水平位,二次突破入场
 
 ![image-20241117103021753](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117103021753.png)
+
+回调走势不希望看见太多重叠的k线,这会导致后续的价格变形
 
 入场后续,形成了铁丝网形态,及其不确定,保守交易者会选择平仓离场,交易胜率已经降低了
 
@@ -176,7 +265,7 @@
 
 ![image-20241117104818743](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117104818743.png)
 
-左侧交易:箱体突破后入场,空色位置挂现价单,止损放支撑和阻力互换的上方一点
+左侧交易:箱体突破后入场,红色位置挂现价单,止损放支撑和阻力互换的上方一点
 
 ![image-20241117105104277](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117105104277.png)
 
@@ -193,6 +282,10 @@
 总结:就是一波急速上涨或下跌,然后一段式回调,或两段式回调,到阻力位,二次突破入场,或者箱体突破入场
 
 ## 认识复杂的回调形态 04
+
+由简单回调变为复杂回调
+
+![image-20241229174554345](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241229174554345.png)
 
 绿色的线
 
@@ -258,4 +351,229 @@
 
 ![image-20241117141228842](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117141228842.png)
 
-复杂回调一般是 ,急速与通道,过冲,交易区间,箱体,收敛区间,楔形回调,两段式回调
+复杂回调一般是 ,急速与通道,过冲,交易区间,箱体,收敛区间,楔形回调,三角收敛,
+
+## 如何交易复杂回调形态05
+
+大多数楔形都是由三次推动,形成一个类似于楔子的形状,就把他当成楔形交易
+
+![image-20241118124608757](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241118124608757.png)
+
+急速  -> 窄幅通道 -> 宽幅通道   这是趋势动能在减弱的标志可能面临深幅回调
+
+![image-20241118124800764](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241118124800764.png)
+
+这里是一个很好的两段式下跌接回调,但是后续入场之后发现多头动能不足,出现了k线重叠的小交易区间,接了一 次  二次测试,后续还是动能不足,直到大阴线出来,彻底否定多头,微亏离场
+
+![image-20241118125443845](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241118125443845.png)
+
+发现楔形已经走出来了, 可以通道线左侧入场,也可以上破趋势线入场,但是这都是左侧入场,交易胜率降低,来换取盈亏比
+
+等波段水平阻力位突破后入场,以及突破回调突破入场     是右侧交易
+
+放弃盈亏比来加大胜率
+
+![image-20241118130835541](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241118130835541.png)
+
+背景是多头趋势,急速的上升突破前面的调整区间,但是第二段上升明显动能不足,预示着会进行深幅的回调,第一段回调没有给我们好的入场形态,有一个小的交易区间可以入场尝试,胜率不高但是盈亏比很好,交易区间的逻辑就是高空低多,顺着大背景多的趋势,做回调结束,后续价格上涨但是没有破前高,认为价格仍然在调整阶段,第二次下跌,对前面波段低点有一次假突破,打在前面的支撑位上,验证了支撑的有效性,并且是一根很好的入场信号的k线,在这里入场进行延续,大背景多头的趋势
+
+![image-20241118131929613](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241118131929613.png)
+
+后续价格的三次推动,能明显看出来动能越来越不足,这代表市场可能进行深幅的调整
+
+![image-20241118132717364](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241118132717364.png)
+
+先是几段上涨,但是越走越弱,预测会进行深幅度回调,走了三段式下跌,再形成交易区间连续几次突破阻力位失败,后续突破阻力位,等一个回调,突破高点挂单左侧入场
+
+![image-20241118141529854](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241118141529854.png)
+
+## 交易复杂回调形态(2)    06
+
+水平位置的阻力位永远比斜线要好
+
+回调走势后,向趋势方向强势突破,这就是趋势延续的形态
+
+趋势延续的形态,反弹无力,并且势能越来越强,这是趋势延续的表现
+
+![image-20241120100744198](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241120100744198.png)
+
+但是如果回调走势后,无法向趋势方向强势突破,就可能是潜在的交易区间
+
+![image-20241120100559669](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241120100559669.png)
+
+回调走势后,向趋势方向突破无力,这是潜在的反转形态
+
+
+
+如果回调之后的走势,是对前方极值 方向强势突破,那就是延续
+
+如果在前方极值的水平位置出现停顿,那就是潜在的交易区间
+
+如果对前方极值突破无力,并有一次逆势突破,那就是潜在的反转形态
+
+![image-20241120101150775](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241120101150775.png)
+
+
+
+大周期背景是长时间的底部交易区间,形成了一次多头的突破,接下来要考虑做多
+
+![image-20250107114057063](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250107114057063.png)
+
+小周期图上,看见三推楔形,也可以当作急速与通道,明显看见能量依次减弱,判断后续
+
+会倾向于出现复杂回调,也有可能回测通道起点,  后面形成了短暂的交易区间,但是没有多久就上破了,但是上破的能量依旧很弱,上涨一点就又形成交易区间
+
+还是考虑之前的观点,会形成复杂回调,找机会入场右侧做多
+
+![image-20250107114908439](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250107114908439.png)
+
+小周期有一次做空机会但是失败了,但是,是一笔优质的交易
+
+价格跌破趋势线,突破阻力位失败,这个位置低二入场,但是后续价格并没有向下跌太多,在交易区间没有突破之前还是得一直看区间内交易,看见能量衰竭可以尝试做短空
+
+![image-20250107115402109](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250107115402109.png)
+
+价格后续下跌到支撑位,但是此时做多要保守,不能考虑拿太远,要等下跌能量消磨一阵,二次回调在考虑拿远
+
+第一次下跌到支撑位,高二入场,止损放下面支撑位,止盈放上面波段高点,不考虑拿太远
+
+
+
+![image-20250107120139438](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250107120139438.png)
+
+后续形成了上行通道,短线交易者,完美止盈,后面跌破了支撑位,但是依旧不考虑做空,因为盈亏比太差,
+
+做逆势交易就已经胜率很低了,此时如果盈亏比再低, 就是一笔很差的交易订单,不要做这种交易
+
+![image-20250107120848038](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250107120848038.png)
+
+市场后续走出了楔形,但是上涨到第一波段点的时候价格停住了,后续又转成了交易区间
+
+![image-20250107121744821](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250107121744821.png)
+
+出现了一根强势高潮的k线,但是不去交易,这里大阳线很容易导致假突破,希望在突破时看见,一波压力的蓄积,这样一般都是真突破
+
+这里做多做空都可以,形成了一波内包k的小交易区间,
+
+可以考虑内包k中部做空,交易胜率百分之50  ,盈亏比2:1,这在数学上有很好的优势
+
+也可以内包k底部做多,也是百分之50  ,盈亏比2:1
+
+交易区间百分之50, 做交易如果胜率是50,那么你的盈亏比一定要有优势,要不然就不做,1:1都不做
+
+赢一笔可以亏2笔,这才好
+
+高胜率的订单可以尝试1:1,因为胜率高
+
+最好是高胜率和盈亏比高一起,这是最完美的
+
+
+
+![image-20250107122434620](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250107122434620.png)
+
+# 交易复杂回调形态  07
+
+交易的系统化步骤
+
+1.先看大周期的市场状态,是趋势还是区间,找到要做的方向
+
+2.找到方向之后再去找小周期的形态和结构,要做楔形还是通道
+
+3.找到形态结构,再去找入场k线形态,是单k反转,还是双k反转入场,2次突破
+
+分三步骤就能做一笔交易的入场
+
+4.后面就是订单管理就是其他部分
+
+
+
+
+
+所有的上行通道都是熊旗,下破的概率大于上破
+
+这个通道运行很久了,后面价格过冲上破,形成假突破,交易高手会在这里做空,目标位期待价格测试上行趋势线
+
+
+
+![image-20250109163259834](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250109163259834.png)
+
+ 
+
+放大看,这是急速与通道形态,经常测试通道起点
+
+所有的下行通道都是牛旗,倾向于向上突破
+
+这里有多重的分析逻辑可以做多
+
+1.高二入场
+
+2.水平支撑位回调
+
+3.趋势线边界处
+
+都有理由做多因为是急速与通道形态,但是后续被市场否决了,止损离场,
+
+这在交易中很常见,多重的验证逻辑被市场否决了,证明了市场的不可预测性,不能和市场较劲,死扛
+
+交易失败,但是不代表交易系统是错的,这是一笔 好订单,只是没成功而已
+
+![image-20250109164250220](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250109164250220.png)
+
+1.大背景是上行通道下破,急速接通道接急速 ,容易形成深幅回调  ,找机会回调做空
+
+2.后续小背景形成上行通道,
+
+   2.1.水平阻力位,黄色处K线,向上假突破阻力位,可以考虑做空,但是后续被市场否决
+
+   2.2.红色处,双k线反转,但是没走多远又被市场否绝,后续看见还是在上行通道里
+
+3.箭头处上破失败继续做空
+
+![image-20250109173443136](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250109173443136.png)
+
+
+
+# 回调形态总结,  价格行为相关书籍推荐 08
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
