--- a/罗伯特书一些专业术语.md
+++ b/罗伯特书一些专业术语.md
@@ -69,6 +69,88 @@
 
 
 
+##### 融资 :
+
+就是找投资,借钱 一种是找银行借钱,还利息
+
+债权融资:向银行、机构或个人借款，需还本付息
+
+还有一种 
+
+股权融资:   出让股份引入投资者
+
+
+
+##### 天使轮、A轮、B轮 :
+
+天使轮 **（Angel Round）**
+
+天使轮是创业公司首次对外融资的阶段，
+
+通常发生在公司成立初期，产品或服务尚未完全成熟
+
+甚至可能还处于概念阶段。
+
+仅有概念或原型产品，未商业化
+
+资金用途：开发产品、搭建核心团队、初步市场验证。
+
+投资方一般是     个人投资(也叫天使投资人) ,  机构(天使机构) 专做早期的机构
+
+通常占股5% ~ 20%
+
+
+
+A轮**（Series A）**
+
+公司完成产品验证后，首次引入专业风险投资**（Venture Capital）**的融资阶段，目标是将产品推向市场。
+
+公司阶段：
+
+产品已上线，有初步用户数据（如月活10万+）。
+
+商业模式清晰，但未盈利或微利。
+
+资金用途：市场扩张、团队扩充、优化产品
+
+通常占股10%-25%
+
+
+
+B轮**（Series B）**
+
+公司进入**规模化增长**阶段，通过融资加速占领市场，巩固行业地位
+
+公司阶段：
+
+已实现稳定收入，商业模式被验证。
+
+需要资金压倒竞争对手或扩展新区域。
+
+资金用途: 大规模营销、技术升级、并购潜在对手
+
+新引入PE  (Private Equity)基金
+
+
+
+##### 后续轮次（C轮、D轮等）
+
+- **C轮**：Pre-IPO前的冲刺阶段，用于全球化、多元化或提升利润。
+- **D轮及以后**：少数公司需要，通常因未达上市标准或应对竞争压力。
+- **战略投资**：行业巨头注资（如阿里、腾讯），侧重业务协同而非单纯财务回报。
+
+| **维度**     | **天使轮**        | **A轮**      | **B轮**      |
+| :----------- | :---------------- | :----------- | :----------- |
+| **公司阶段** | 概念验证期        | 产品验证期   | 规模扩张期   |
+| **资金来源** | 个人天使/小型基金 | 专业VC机构   | VC+PE        |
+| **估值范围** | 500万-5000万元    | 1亿-10亿元   | 10亿-50亿元  |
+| **核心目标** | 活下来，做出产品  | 跑通商业模式 | 成为市场头部 |
+| **失败率**   | ＞90%             | 约70%        | 约50%        |
+
+
+
+
+
 承兑汇票:
 
 房地产投资信托:
@@ -86,6 +168,100 @@
 离岸:
 
 C型企业和特许经营权:
+
+股票、债券、外汇或现金，硬资产如土地、黄金和石油等
+
+养老基金
+
+对冲基金
+
+
+
+## 经济学原理(微观)
+
+##### 稀缺性:
+
+是指社会资源是有限的,资源是稀缺的,有钱你就能吃鱼子酱,没钱就吃面包,越是缺的东西越贵
+
+##### 经济学:
+
+研究社会如何管理自己的稀缺资源,资源是由千百万个家庭来共同配置的
+
+##### 经济学家:
+
+研究人们如何做出决策, 做多少工作,购买什么,储蓄多少,以及如何把储蓄用于投资......
+
+##### 效率:
+
+经济学里的效率(帕累托效率),指的是干某件事的最优情况,能从稀缺资源里获得最大的利益
+
+##### 平等:
+
+经济学里的平等,指的是经济蛋糕如何平等的分给每个人,但是真正的平等是不存在的,
+
+你想要从高收入人群手里收税,为低收入人群增大福利就会导致经济蛋糕变小,就减少了辛勤劳动奖励,降低了效率
+
+##### 机会成本:
+
+为了得到某样东西,所必须放弃的东西,想要打游戏就得放弃学习,想要今天吃米饭,就得放弃别的原来可以做的任何事情
+
+##### 理性人:
+
+经济学家假设人都是理性人,是指始终以 自身利益最大化 为目标（如消费者追求效用最大化，企业追求利润最大化）做事也不是非黑即白,比如选择吃饭,不是在  完全不吃  和 大吃一顿 之前选择,而是多吃一点,少吃一点
+
+理性人通常比较边际收益和边际成本来做决策
+
+
+
+##### 边际变动:
+
+对现有的行动计划产生微量的调整,A每天吃10块钱的饭,今天突然吃11块钱,比原来多一块钱,这就是边际变动.
+
+##### 边际收益:
+
+原来一个月生产100个产品,但是这一次生产了101个,多出的一个卖出去的收益就是边际收益
+
+##### 边际成本:
+
+原来一个月生产100个产品,但是这一次生产了101个,多生产的一个,所需的成本就是边际成本
+
+##### 激励:
+
+  例如:果园                              水果市场价格上涨                →           老板就多雇员工采摘           ↓
+
+​                                                            ↑                                                                       因为市场具有周期循环(经济周期)
+
+​                                                                                                                                                             ↓
+
+​                                                     老板就裁员                       ←                                         水果市场价格下降
+
+激励还具有正激励和负激励
+
+​         正激励,就激励人们多做这些事,比如某产品上涨,就会导致市场热情高涨,疯狂买入
+
+​         负激励,政府罚款企业污染税, 让人们不要做这种事.....
+
+
+
+##### 市场经济:
+
+企业和家庭在物品服务市场上互相交易时,通过他们的分散决策配置资源的经济.
+
+虽然市场里的每个人都没有一个人是追求整个社会的经济福利,但是事实证明市场经济 在以一种促进整体经济的方式在运行,仿佛是一直看不见的手所指引
+
+##### 中央计划经济:
+
+市场上的价格由中央计划者决定,这些计划者缺乏关于消费者爱好和生产成本的必要信息,而这些都反应在价格上,中央计划之所以失败,是因为他们在管理经济时把市场这只看不见的手绑起来了
+
+
+
+
+
+
+
+
+
+
 
 
 
