--- a/价格行为分析.md
+++ b/价格行为分析.md
@@ -1,4 +1,4 @@
-## 价格行为是什么
+##   价格行为是什么
 
 ![image-20241116090226449](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241116090226449.png)
 
@@ -261,6 +261,10 @@ btc基本是现货主导的价格,空头力量就是大量现货卖掉,多头力
 
 ![image-20241117104233575](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117104233575.png)
 
+急速与通道
+
+![image-20250407133214016](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250407133214016.png)
+
 大幅下破回调至支撑和阻力互换的位置
 
 ![image-20241117104818743](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117104818743.png)
@@ -280,6 +284,18 @@ btc基本是现货主导的价格,空头力量就是大量现货卖掉,多头力
 ![image-20241117110326804](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117110326804.png)
 
 总结:就是一波急速上涨或下跌,然后一段式回调,或两段式回调,到阻力位,二次突破入场,或者箱体突破入场
+
+
+
+![image-20250421121359637](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250421121359637.png)
+
+
+
+![image-20250421121417439](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250421121417439.png)
+
+
+
+
 
 ## 认识复杂的回调形态 04
 
@@ -305,6 +321,10 @@ btc基本是现货主导的价格,空头力量就是大量现货卖掉,多头力
 
 ![image-20241117130511599](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117130511599.png)
 
+通道线过冲
+
+![image-20250407133345622](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250407133345622.png)
+
 急速的上升,两段式回调,再上升,但是能量不足枯竭了
 
 一段本该延续趋势的能量枯竭了,这就是潜在的反转形态
@@ -324,6 +344,14 @@ btc基本是现货主导的价格,空头力量就是大量现货卖掉,多头力
 三段式回调,一般形成楔形
 
 ![image-20241117132942527](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241117132942527.png)
+
+上涨楔形,这个楔形容易形成回调形态
+
+![image-20250407114223416](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250407114223416.png)
+
+上涨楔形
+
+![image-20250407133436880](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250407133436880.png)
 
 先是急速与通道形态,画出通道线,第二根通道线相连接,加速再加速,过冲了,能量耗尽之后,容易形成深幅回调,
 
@@ -375,7 +403,7 @@ btc基本是现货主导的价格,空头力量就是大量现货卖掉,多头力
 
 ![image-20241118130835541](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241118130835541.png)
 
-背景是多头趋势,急速的上升突破前面的调整区间,但是第二段上升明显动能不足,预示着会进行深幅的回调,第一段回调没有给我们好的入场形态,有一个小的交易区间可以入场尝试,胜率不高但是盈亏比很好,交易区间的逻辑就是高空低多,顺着大背景多的趋势,做回调结束,后续价格上涨但是没有破前高,认为价格仍然在调整阶段,第二次下跌,对前面波段低点有一次假突破,打在前面的支撑位上,验证了支撑的有效性,并且是一根很好的入场信号的k线,在这里入场进行延续,大背景多头的趋势
+背景是多头趋势,急速的上升突破前面的调整区间,但是第二段上升明显动能不足,预示着会进行深幅的回调,第一段回调没有给我们好的入场形态,有一个小的交易区间可以入场尝试,胜率不高但是盈亏比很好,交易区间的逻辑就是高空低多,顺着大背景多的趋势,做回调结束,后续价格上涨但是没有破前 高,认为价格仍然在调整阶段,第二次下跌,对前面波段低点有一次假突破,打在前面的支撑位上,验证了支撑的有效性,并且是一根很好的入场信号的k线,在这里入场进行延续,大背景多头的趋势
 
 ![image-20241118131929613](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241118131929613.png)
 
@@ -407,9 +435,9 @@ btc基本是现货主导的价格,空头力量就是大量现货卖掉,多头力
 
 如果回调之后的走势,是对前方极值 方向强势突破,那就是延续
 
-如果在前方极值的水平位置出现停顿,那就是潜在的交易区间
+...如果在前方极值的水平位置出现停顿,那就是潜在的交易区间
 
-如果对前方极值突破无力,并有一次逆势突破,那就是潜在的反转形态
+...如果对前方极值突破无力,并有一次逆势突破,那就是潜在的反转形态
 
 ![image-20241120101150775](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20241120101150775.png)
 
@@ -471,7 +499,11 @@ btc基本是现货主导的价格,空头力量就是大量现货卖掉,多头力
 
 ![image-20250107122434620](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250107122434620.png)
 
-# 交易复杂回调形态  07
+红色是左侧,绿色是右侧
+
+入场点位![image-20250408085628598](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250408085628598.png)
+
+# 交易复杂回调形态(3)      07
 
 交易的系统化步骤
 
@@ -527,7 +559,7 @@ btc基本是现货主导的价格,空头力量就是大量现货卖掉,多头力
 
    2.2.红色处,双k线反转,但是没走多远又被市场否绝,后续看见还是在上行通道里
 
-3.箭头处上破失败继续做空
+3.箭头处上破失败继续做空   !!!-
 
 ![image-20250109173443136](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250109173443136.png)
 
@@ -535,6 +567,61 @@ btc基本是现货主导的价格,空头力量就是大量现货卖掉,多头力
 
 # 回调形态总结,  价格行为相关书籍推荐 08
 
+区间和反转大部分都是回调失败带来的
+
+![image-20250408113921917](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250408113921917.png)
+
+
+
+
+
+![image-20250408114457233](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250408114457233.png)
+
+
+
+![image-20250408115101996](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250408115101996.png)
+
+1.极其新手,k线图是什么,适合k线都看不懂的新手
+
+![image-20250408173120915](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250408173120915.png)
+
+2.基础新手,看完不能操盘,基本功书,
+
+![image-20250408173522792](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250408173522792.png)
+
+3.罗老师推荐,    steven: 已经有基本功了,知道基础的技术分析,想学习价格行为
+
+![image-20250408173627505](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250408173627505.png)
+
+4.进阶,价格行为7成内容不错  , 3成胡扯,阐述自己不会亏钱,那是不可能的,巴菲特都会亏钱
+
+![image-20250408174011023](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250408174011023.png)
+
+5.进阶初级,很多交易心理学习
+
+![image-20250408174757268](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250408174757268.png)
+
+6..进阶ytc进阶交易者
+
+
+
+7.想在学习价格行为领域登峰造极,成为大师
+
+![image-20250408174922925](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250408174922925.png)
+
+
+
+##### 交易心理书籍,  如果你踏空难受,空仓难受,喜欢扛单
+
+![image-20250408175118395](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250408175118395.png)
+
+
+
+# 阿尔布鲁克斯系统教学 价格行为教学  09
+
+暂时的跳过,技术没达到看这本书的时候   
+
+....
 
 
 
@@ -544,30 +631,133 @@ btc基本是现货主导的价格,空头力量就是大量现货卖掉,多头力
 
 
 
+# 初步认识交易区间 10 
+
+
+
+![image-20250409074403116](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250409074403116.png)
+
+
+
+在这段下跌中多空双方的意见一致,所以形成了趋势运动,空头大力布局空单不断加仓,
+
+而多头选择平掉手里多单,在场外观望,只愿意在更低的位置入场
+
+前面的下跌很顺,是因为场内没有多头买入力量导致的真空
+
+直到下面的交易区间,意见开始不合,多空双方在博弈,可能是某个支撑位,可能是什么指标导致的
+
+
+
+1.价格进行急速的下跌,经过调整后又急速的下跌,  急速接急速,可能是空头动能耗尽的表现,下跌的太快就容易面临空头动能耗尽,卖出高潮
+
+2.简单回调后,向下对趋势的极值进行了假突破  (突破后没有跟进力量)
+
+
+
+![image-20250409074811480](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250409074811480.png)
+
+不用搞清楚主力的想法,    阅读k线图出现的信息就行了
+
+1.没有庄家割散户韭菜一说, 因为资金量太小不够庄家塞牙缝, 只有技术不行,用的都是同一张k线图
+
+2.参与小市值的品种,没有多空双方博弈,完全是庄家控盘
+
+![image-20250409075757039](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250409075757039.png)
 
 
 
 
 
+![image-20250409082120787](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250409082120787.png)
+
+如果价格突破一个价值区域(突破波段高点 )后,趋势运行了很远才形成了新的 价值区域就是大牛市
+
+持续很长时间的强劲趋势
+
+![image-20250410083200573](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250410083200573.png)
+
+ 如果价格在突破一个价值区域后没运行多远就形成了新的价值区域,再突破回到新的价值区域内
+
+这就是市场从一个小区间变成了一个大的交易区间
+
+![image-20250410083650966](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250410083650966.png)
+
+上行通道或下行通道,多空双方在通道中积极参与市场,其中某一方占据略微的优势
+
+![image-20250410083829314](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250410083829314.png)
+
+
+
+急速与通道形态,回测通道起点处,然后突破波段高点失败,在前波段低点处又获得了支撑
+
+这就是潜在交易区间
+
+
+
+![image-20250410084042003](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250410084042003.png)
+
+急速下跌深幅回调,之后下跌失败,甚至没有达到波段低点处,再次进行向上回调,验证了阻力位
+
+认为是潜在交易区间
+
+如果直接涨破就是潜在反转
+
+
+
+![image-20250410084445200](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250410084445200.png)
+
+
+
+![image-20250410095632098](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250410095632098.png)
+
+
+
+![image-20250410100022985](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250410100022985.png)
+
+
+
+![image-20250410100951560](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250410100951560.png)
 
 
 
 
 
+# 形态周期判断和区间突破失败（11）
+
+
+
+在这种有一百多根k线的图上找信号k线,他的成功率不是很高
+
+几根k线组成的信号,对比一个一两百根组成的结构,信号k线当然就很弱了
+
+
+
+![image-20250417104810834](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250417104810834.png)
+
+
+
+同样的图,换了一个周期,从30分钟换到1小时,结构就很明显了,虽然80根k线也很多,但是成功概率会大大提升
+
+
+
+![image-20250417105220561](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250417105220561.png)
+
+阿布书里的高二入场信号k
+
+![image-20250417105820793](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250417105820793.png)
 
 
 
 
 
+![image-20250417110017264](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250417110017264.png)
 
 
 
+高二入场
 
-
-
-
-
-
+![image-20250417152706454](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20250417152706454.png)
 
 
 
