--- a/罗伯特系列书-富爸爸穷爸爸读后感.md
+++ b/罗伯特系列书-富爸爸穷爸爸读后感.md
@@ -1,4 +1,4 @@
-#                     **罗伯特系列书-富爸爸穷爸爸读后感**
+#                     **罗伯特系列书-富爸爸穷爸爸**
 
 - 改变他人很难,但是改变自己很简单,为什么自己穷? 不要找国家原因,要首先找自己原因,每个国家都有有钱人和穷人,为什么你不能当有钱人?
 
