--- a/罗伯特书一些专业术语.md
+++ b/罗伯特书一些专业术语.md
@@ -151,9 +151,40 @@ B轮**（Series B）**
 
 
 
+房地产信托投资基金:
+
+房地产信托投资基金（REITs，Real Estate Investment Trusts）是一种**以发行收益凭证的方式，汇集投资者资金，由专业机构管理，专门投资于房地产或相关资产，并将绝大部分收益（通常≥90%）分配给投资者的金融工具**。其核心逻辑是**“让普通人也能当房东”**，通过证券化手段将大额、低流动性的房地产转化为小额、高流动性的投资产品。
+
+1. **运作模式**
+   - **资金池**：投资者购买REITs份额（类似股票），资金形成资产池。
+   - **资产收购**：管理人用资金购买商业地产（如写字楼、购物中心、公寓、医院、数据中心等），或持有房地产抵押贷款（抵押型REITs）。
+   - **收益来源**：租金、房产增值或贷款利息。
+   - **强制分红**：法律要求将90%以上收入以股息形式分给投资者（例如，美国REITs股息率通常4%-8%）。
+2. **核心特点**
+   - **流动性强**：可在二级市场交易（如股票账户买卖），比直接买卖房产更快变现。
+   - **门槛低**：几百元即可投资，无需全款购房。
+   - **分散风险**：资金分散投资于多个物业，避免“单套房产空置”的风险。
+   - **税务优惠**：多数国家免征公司层面所得税（避免双重征税），但投资者需缴纳股息税。
+
+
+
+
+
+
+
+
+
+
+
+部分储备金制度:
+
+公开市场和私营市场
+
 承兑汇票:
 
 房地产投资信托:
+
+大宗商品:
 
 股票投资组合:
 
@@ -175,85 +206,13 @@ C型企业和特许经营权:
 
 对冲基金
 
+二级市场 , 一级市场
 
+纳斯达克
 
-## 经济学原理(微观)
+互联网泡沫
 
-##### 稀缺性:
-
-是指社会资源是有限的,资源是稀缺的,有钱你就能吃鱼子酱,没钱就吃面包,越是缺的东西越贵
-
-##### 经济学:
-
-研究社会如何管理自己的稀缺资源,资源是由千百万个家庭来共同配置的
-
-##### 经济学家:
-
-研究人们如何做出决策, 做多少工作,购买什么,储蓄多少,以及如何把储蓄用于投资......
-
-##### 效率:
-
-经济学里的效率(帕累托效率),指的是干某件事的最优情况,能从稀缺资源里获得最大的利益
-
-##### 平等:
-
-经济学里的平等,指的是经济蛋糕如何平等的分给每个人,但是真正的平等是不存在的,
-
-你想要从高收入人群手里收税,为低收入人群增大福利就会导致经济蛋糕变小,就减少了辛勤劳动奖励,降低了效率
-
-##### 机会成本:
-
-为了得到某样东西,所必须放弃的东西,想要打游戏就得放弃学习,想要今天吃米饭,就得放弃别的原来可以做的任何事情
-
-##### 理性人:
-
-经济学家假设人都是理性人,是指始终以 自身利益最大化 为目标（如消费者追求效用最大化，企业追求利润最大化）做事也不是非黑即白,比如选择吃饭,不是在  完全不吃  和 大吃一顿 之前选择,而是多吃一点,少吃一点
-
-理性人通常比较边际收益和边际成本来做决策
-
-
-
-##### 边际变动:
-
-对现有的行动计划产生微量的调整,A每天吃10块钱的饭,今天突然吃11块钱,比原来多一块钱,这就是边际变动.
-
-##### 边际收益:
-
-原来一个月生产100个产品,但是这一次生产了101个,多出的一个卖出去的收益就是边际收益
-
-##### 边际成本:
-
-原来一个月生产100个产品,但是这一次生产了101个,多生产的一个,所需的成本就是边际成本
-
-##### 激励:
-
-  例如:果园                              水果市场价格上涨                →           老板就多雇员工采摘           ↓
-
-​                                                            ↑                                                                       因为市场具有周期循环(经济周期)
-
-​                                                                                                                                                             ↓
-
-​                                                     老板就裁员                       ←                                         水果市场价格下降
-
-激励还具有正激励和负激励
-
-​         正激励,就激励人们多做这些事,比如某产品上涨,就会导致市场热情高涨,疯狂买入
-
-​         负激励,政府罚款企业污染税, 让人们不要做这种事.....
-
-
-
-##### 市场经济:
-
-企业和家庭在物品服务市场上互相交易时,通过他们的分散决策配置资源的经济.
-
-虽然市场里的每个人都没有一个人是追求整个社会的经济福利,但是事实证明市场经济 在以一种促进整体经济的方式在运行,仿佛是一直看不见的手所指引
-
-##### 中央计划经济:
-
-市场上的价格由中央计划者决定,这些计划者缺乏关于消费者爱好和生产成本的必要信息,而这些都反应在价格上,中央计划之所以失败,是因为他们在管理经济时把市场这只看不见的手绑起来了
-
-
+上证指数
 
 
 
